--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="container">          
 
-          <a type="button" class="btn btn-danger btn-lg w-100 mt-4 mb-5" href="/register">등록하기</a>
+          <a type="button" class="btn btn-danger btn-lg w-100 mt-4 mb-5" href="/create/user">등록하기</a>
 
           <a type="button" class="btn btn-success btn-lg w-100 mb-5" href="/calendar">캘린더</a>
           <a type="button" class="btn btn-info btn-lg w-100" href="/lank">랭킹</a>
