--- a/src/main/resources/templates/draw.html
+++ b/src/main/resources/templates/draw.html
@@ -8,10 +8,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <style>
         .spinner{
             display: block;
@@ -20,11 +19,53 @@
             top: calc(25%-(10px/2));
             right: calc(25%-(10px/2));
         }
-    
+
+        .autocomplete {
+  /*the container must be positioned relative:*/
+  position: relative;
+  display: inline-block;
+}
+input {
+  border: 1px solid transparent;
+  background-color: #f1f1f1;
+  padding: 10px;
+  font-size: 16px;
+}
+input[type=submit] {
+  background-color: DodgerBlue;
+  color: #fff;
+}
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 100%;
+  left: 0;
+  right: 0;
+}
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff;
+  border-bottom: 1px solid #d4d4d4;
+}
+.autocomplete-items div:hover {
+  /*when hovering an item:*/
+  background-color: #e9e9e9;
+}
+.autocomplete-active {
+  /*when navigating through the items using the arrow keys:*/
+  background-color: DodgerBlue !important;
+  color: #ffffff;
+}
     </style>
   </head>
   <body style="background-color:rgb(217, 235, 235)">
     
+   
         <div class="container">
             <div class="bg-white p-4 shadow mt-1">
                 <div class="heading-section text-center">
@@ -32,26 +73,26 @@
                         설정하기
                     </h2>
                 </div>
+              
                 <form method="post" name="contact-us"onsubmit="return false;">
                     <div class="row">
-                        <div class="col-md-12 form-group">
-                            <input type="text" class="form-control" id="name" name="name" placeholder="Name">
+                        <div class="col-md-12 form-group autocomplete">
+                            <input type="text" class="form-control" id="name1" name="name" placeholder="Name" autocomplete="off">
                         </div>
                         <div class="col-md-12 form-group">
-                            <input type="text" class="form-control" id="name" name="name2" placeholder="Name">
+                            <input type="text" class="form-control" id="name2" name="name" placeholder="Name" autocomplete="off">
                         </div>
                         <div class="col-md-12 form-group">
-                            <input type="text" class="form-control" id="name" name="name3" placeholder="Name">
+                            <input type="text" class="form-control" id="name3" name="name" placeholder="Name" autocomplete="off">
                         </div>
                         <div class="col-md-12 form-group">
-                            <input type="text" class="form-control" id="name" name="name4" placeholder="Name">
+                            <input type="text" class="form-control" id="name4" name="name" placeholder="Name" autocomplete="off">
                         </div>
                         <div class="col-md-12 form-group">
-                            <input type="text" class="form-control" id="name" name="name5" placeholder="Name">
+                            <input type="text" class="form-control" id="name5" name="name" placeholder="Name" autocomplete="off">
                         </div>
-                        
                         <div class="col-md-12 form-group">
-                            <input type="text" class="form-control" id="name" name="name6" placeholder="Name">
+                            <input type="text" class="form-control" id="name6" name="name" placeholder="Name" autocomplete="off">
                         </div>
                     </div>
                 </form>
@@ -114,12 +155,124 @@
              </div>
         </div>  
        
-        
+    <div class="autocomplete" style="width:300px;">
+      <input id="myInput" type="text" name="myCountry" placeholder="Country">
+    </div>
+
+       
   </body>
   <script>
-       function drawingLots() {
+ 
+      let inpu = document.getElementById("name1");
+      console.log(inpu.parentNode);
+      inpu.addEventListener("keyup",()=>{
+        let name = inpu.value;
 
-    
+        if(name != ''){
+          fetch("/api/v1/user/search/"+name,{
+                method : 'GET',
+                headers: {'Content-Type': 'application/json'}
+              }).then(res => {
+                if(res.ok){
+                  return res.json()
+                }
+              }).then(json => {  
+                console.log(json);
+                autocomplete(inpu, json);
+              })
+        }
+      })
+      
+      function autocomplete(inp, arr) {
+        let currentFocus;
+     
+       // inp.addEventListener("keyup", function(e) {
+            let a, b, i, val = inp.value;
+           
+          closeAllLists();
+          /*   if (!val) { 
+              return false;
+            } */
+            currentFocus = -1;
+            /*create a DIV element that will contain the items (values):*/
+            a = document.createElement("DIV");
+            
+            a.setAttribute("id", this.id + "autocomplete-list");
+            a.setAttribute("class", "autocomplete-items");
+            
+
+            inp.parentNode.appendChild(a);
+            /*for each item in the array...*/
+            for (i = 0; i < arr.length; i++) {
+                b = document.createElement("DIV");
+                b.innerHTML = "<strong>" + arr[i].substr(0, val.length) + "</strong>";
+                b.innerHTML += arr[i].substr(val.length);
+                b.innerHTML += "<input type='hidden' value='" + arr[i] + "'>";
+                    /* b.addEventListener("click", function(e) {
+                    inp.value = this.getElementsByTagName("input")[0].value;
+                    closeAllLists();
+                }); */
+                a.appendChild(b);
+            }
+       // });
+        /*execute a function presses a key on the keyboard:*/
+        inp.addEventListener("keydown", function(e) {
+            let x = document.getElementById(this.id + "autocomplete-list");
+            if (x) x = x.getElementsByTagName("div");
+            if (e.keyCode == 40) {
+              /*If the arrow DOWN key is pressed,
+              increase the currentFocus letiable:*/
+              currentFocus++;
+              /*and and make the current item more visible:*/
+              addActive(x);
+            } else if (e.keyCode == 38) { //up
+              /*If the arrow UP key is pressed,
+              decrease the currentFocus letiable:*/
+              currentFocus--;
+              /*and and make the current item more visible:*/
+              addActive(x);
+            } else if (e.keyCode == 13) {
+              /*If the ENTER key is pressed, prevent the form from being submitted,*/
+              e.preventDefault();
+              if (currentFocus > -1) {
+                /*and simulate a click on the "active" item:*/
+                if (x) x[currentFocus].click();
+              }
+            }
+        });
+        function addActive(x) {
+          /*a function to classify an item as "active":*/
+          if (!x) return false;
+          /*start by removing the "active" class on all items:*/
+          removeActive(x);
+          if (currentFocus >= x.length) currentFocus = 0;
+          if (currentFocus < 0) currentFocus = (x.length - 1);
+          /*add class "autocomplete-active":*/
+          x[currentFocus].classList.add("autocomplete-active");
+        }
+        function removeActive(x) {
+          /*a function to remove the "active" class from all autocomplete items:*/
+          for (let i = 0; i < x.length; i++) {
+            x[i].classList.remove("autocomplete-active");
+          }
+        }
+        function closeAllLists(elmnt) {
+          let x = document.getElementsByClassName("autocomplete-items");
+          for (let i = 0; i < x.length; i++) {
+            if (elmnt != x[i] && elmnt != inp) {
+            x[i].parentNode.removeChild(x[i]);
+          }
+        }
       }
+      /*execute a function when someone clicks in the document:*/
+      document.addEventListener("click", function (e) {
+          closeAllLists(e.target);
+      });
+      }
+
+         
   </script>
 </html>
+
+
+
