--- a/src/main/resources/templates/draw.html
+++ b/src/main/resources/templates/draw.html
@@ -22,45 +22,45 @@
 
         .autocomplete {
   /*the container must be positioned relative:*/
-  position: relative;
-  display: inline-block;
-}
-input {
-  border: 1px solid transparent;
-  background-color: #f1f1f1;
-  padding: 10px;
-  font-size: 16px;
-}
-input[type=submit] {
-  background-color: DodgerBlue;
-  color: #fff;
-}
-.autocomplete-items {
-  position: absolute;
-  border: 1px solid #d4d4d4;
-  border-bottom: none;
-  border-top: none;
-  z-index: 99;
-  /*position the autocomplete items to be the same width as the container:*/
-  top: 100%;
-  left: 0;
-  right: 0;
-}
-.autocomplete-items div {
-  padding: 10px;
-  cursor: pointer;
-  background-color: #fff;
-  border-bottom: 1px solid #d4d4d4;
-}
-.autocomplete-items div:hover {
-  /*when hovering an item:*/
-  background-color: #e9e9e9;
-}
-.autocomplete-active {
-  /*when navigating through the items using the arrow keys:*/
-  background-color: DodgerBlue !important;
-  color: #ffffff;
-}
+            position: relative;
+            display: inline-block;
+          }
+          input {
+            border: 1px solid transparent;
+            background-color: #f1f1f1;
+            padding: 8px;
+            font-size: 16px;
+          }
+          input[type=submit] {
+            background-color: DodgerBlue;
+            color: #fff;
+          }
+          .autocomplete-items {
+            position: absolute;
+            border: 1px solid #d4d4d4;
+            border-bottom: none;
+            border-top: none;
+            z-index: 99;
+            /*position the autocomplete items to be the same width as the container:*/
+            top: 100%;
+            left: 0;
+            right: 0;
+          }
+          .autocomplete-items div {
+            padding: 10px;
+            cursor: pointer;
+            background-color: #fff;
+            border-bottom: 1px solid #d4d4d4;
+          }
+          .autocomplete-items div:hover {
+            /*when hovering an item:*/
+            background-color: #e9e9e9;
+          }
+          .autocomplete-active {
+            /*when navigating through the items using the arrow keys:*/
+            background-color: DodgerBlue !important;
+            color: #ffffff;
+          }
     </style>
   </head>
   <body style="background-color:rgb(217, 235, 235)">
@@ -74,53 +74,51 @@ input[type=submit] {
                     </h2>
                 </div>
               
-                <form method="post" name="contact-us"onsubmit="return false;">
-                    <div class="row">
-                        <div class="col-md-12 form-group autocomplete">
-                            <input type="text" class="form-control" id="name1" name="name" placeholder="Name" autocomplete="off">
-                        </div>
-                        <div class="col-md-12 form-group">
-                            <input type="text" class="form-control" id="name2" name="name" placeholder="Name" autocomplete="off">
-                        </div>
-                        <div class="col-md-12 form-group">
-                            <input type="text" class="form-control" id="name3" name="name" placeholder="Name" autocomplete="off">
-                        </div>
-                        <div class="col-md-12 form-group">
-                            <input type="text" class="form-control" id="name4" name="name" placeholder="Name" autocomplete="off">
-                        </div>
-                        <div class="col-md-12 form-group">
-                            <input type="text" class="form-control" id="name5" name="name" placeholder="Name" autocomplete="off">
-                        </div>
-                        <div class="col-md-12 form-group">
-                            <input type="text" class="form-control" id="name6" name="name" placeholder="Name" autocomplete="off">
-                        </div>
+              <form action="/result" id="form" method="POST" onsubmit="return false;" >
+                <div class="row">
+                    <div class="col-md-12 form-group autocomplete ">
+                        <input type="text" class="form-control name" id="name1" name="name" placeholder="Name" autocomplete="off">
                     </div>
-                </form>
+                    <div class="col-md-12 form-group autocomplete ">
+                        <input type="text" class="form-control name" id="name2" name="name" placeholder="Name" autocomplete="off">
+                    </div>
+                    <div class="col-md-12 form-group autocomplete ">
+                        <input type="text" class="form-control name" id="name3" name="name" placeholder="Name" autocomplete="off">
+                    </div>
+                    <div class="col-md-12 form-group autocomplete ">
+                        <input type="text" class="form-control name" id="name4" name="name" placeholder="Name" autocomplete="off">
+                    </div>
+                    <div class="col-md-12 form-group autocomplete ">
+                        <input type="text" class="form-control name" id="name5" name="name" placeholder="Name" autocomplete="off">
+                    </div>
+                    <div class="col-md-12 form-group autocomplete ">
+                        <input type="text" class="form-control name" id="name6" name="name" placeholder="Name" autocomplete="off">
+                    </div>
+                </div>
+                
 
-                <hr>
-                <div class="">
-                    <select class="form-control form-control-md" name="" id="">
+                  <hr>
+                  <select class="form-control form-control-md" name="count">
                       <option disabled selected>인원수 설정</option>
                       <option>1</option>
                       <option>2</option>                            
                       <option>3</option>                            
                       <option disabled> 3명이상은 추첨이 아닙니다. 더치페이 하세요</option>                            
-                    </select>
-                  </div>
+                  </select>
 
-                  <div class=" mt-3">
+                  <div class="mt-3">
                       <input type="text" class="form-control" id="bet" name="bet" placeholder="금액을 입력해주세요">
                   </div>
 
-                   <div class=" mt-3">
-                      <input type="text" class="form-control" id="bet" name="bet" placeholder="제목을 입력해주세요">
-                  </div>
-                  
-                  <hr>
+                   <div class="mt-3">
+                      <input type="text" class="form-control" id="title" name="title" placeholder="제목을 입력해주세요">
+                   </div>
+                   <hr>
 
                   <div class="col-md-12 text-center">
-                      <button class="btn btn-success btn-shadow btn-lg" id="ll" data-target="#modelId" data-toggle="modal" onclick="drawingLots()">추첨하기!</button>
-                  </div>   
+                      <button class="btn btn-success btn-shadow btn-lg" id="btn" data-target="#modelId" data-toggle="modal">추첨하기!</button>
+                  </div>  
+                </div> 
             </div>
         </div>
 
@@ -154,108 +152,77 @@ input[type=submit] {
                 </div>
              </div>
         </div>  
-       
-    <div class="autocomplete" style="width:300px;">
-      <input id="myInput" type="text" name="myCountry" placeholder="Country">
-    </div>
 
        
   </body>
   <script>
- 
-      let inpu = document.getElementById("name1");
-      console.log(inpu.parentNode);
-      inpu.addEventListener("keyup",()=>{
-        let name = inpu.value;
 
-        if(name != ''){
-          fetch("/api/v1/user/search/"+name,{
-                method : 'GET',
-                headers: {'Content-Type': 'application/json'}
-              }).then(res => {
-                if(res.ok){
-                  return res.json()
-                }
-              }).then(json => {  
-                console.log(json);
-                autocomplete(inpu, json);
-              })
-        }
+    document.getElementById("btn").addEventListener("click",()=>{
+        setInterval(()=>{
+          document.getElementById("form").submit();
+        },2000);
+    })
+
+    document.querySelectorAll(".name").forEach(target=>{
+        target.addEventListener("keyup",()=>{
+        let name = target.value
+          if(name != ''){
+            fetch("/api/v1/user/search/"+name,{
+                  method : 'GET',
+                  headers: {'Content-Type': 'application/json'}
+                }).then(res => {
+                  if(res.ok){
+                    return res.json()
+                  }
+                }).then(json => {  
+                  console.log(json);
+                  autocomplete(target, json);
+                })
+            }
+        })
       })
       
       function autocomplete(inp, arr) {
         let currentFocus;
      
-       // inp.addEventListener("keyup", function(e) {
-            let a, b, i, val = inp.value;
-           
-          closeAllLists();
-          /*   if (!val) { 
-              return false;
-            } */
-            currentFocus = -1;
-            /*create a DIV element that will contain the items (values):*/
-            a = document.createElement("DIV");
-            
-            a.setAttribute("id", this.id + "autocomplete-list");
-            a.setAttribute("class", "autocomplete-items");
-            
+        let a, b, i, val = inp.value;
+        
+        closeAllLists();
+        currentFocus = -1;
+        a = document.createElement("div");
+        
+        a.setAttribute("id", this.id + "autocomplete-list");
+        a.setAttribute("class", "autocomplete-items");
+        
 
-            inp.parentNode.appendChild(a);
-            /*for each item in the array...*/
-            for (i = 0; i < arr.length; i++) {
-                b = document.createElement("DIV");
-                b.innerHTML = "<strong>" + arr[i].substr(0, val.length) + "</strong>";
-                b.innerHTML += arr[i].substr(val.length);
-                b.innerHTML += "<input type='hidden' value='" + arr[i] + "'>";
-                    /* b.addEventListener("click", function(e) {
-                    inp.value = this.getElementsByTagName("input")[0].value;
-                    closeAllLists();
-                }); */
-                a.appendChild(b);
-            }
-       // });
-        /*execute a function presses a key on the keyboard:*/
-        inp.addEventListener("keydown", function(e) {
-            let x = document.getElementById(this.id + "autocomplete-list");
-            if (x) x = x.getElementsByTagName("div");
-            if (e.keyCode == 40) {
-              /*If the arrow DOWN key is pressed,
-              increase the currentFocus letiable:*/
-              currentFocus++;
-              /*and and make the current item more visible:*/
-              addActive(x);
-            } else if (e.keyCode == 38) { //up
-              /*If the arrow UP key is pressed,
-              decrease the currentFocus letiable:*/
-              currentFocus--;
-              /*and and make the current item more visible:*/
-              addActive(x);
-            } else if (e.keyCode == 13) {
-              /*If the ENTER key is pressed, prevent the form from being submitted,*/
-              e.preventDefault();
-              if (currentFocus > -1) {
-                /*and simulate a click on the "active" item:*/
-                if (x) x[currentFocus].click();
-              }
-            }
-        });
+        inp.parentNode.appendChild(a);
+        /*for each item in the array...*/
+        for (i = 0; i < arr.length; i++) {
+            b = document.createElement("div");
+            b.innerHTML = "<strong>" + arr[i].substr(0, val.length) + "</strong>";
+            b.innerHTML += arr[i].substr(val.length);
+            b.innerHTML += "<input type='hidden' value='" + arr[i] + "'>";
+            b.addEventListener("click", function(e) {
+                inp.value = this.getElementsByTagName("input")[0].value;
+                closeAllLists();
+            });
+            a.appendChild(b);
+         }
+
         function addActive(x) {
-          /*a function to classify an item as "active":*/
           if (!x) return false;
-          /*start by removing the "active" class on all items:*/
           removeActive(x);
           if (currentFocus >= x.length) currentFocus = 0;
           if (currentFocus < 0) currentFocus = (x.length - 1);
-          /*add class "autocomplete-active":*/
           x[currentFocus].classList.add("autocomplete-active");
         }
+
         function removeActive(x) {
-          /*a function to remove the "active" class from all autocomplete items:*/
-          for (let i = 0; i < x.length; i++) {
+              for (let i = 0; i < x.length; i++) {
             x[i].classList.remove("autocomplete-active");
           }
         }
+
         function closeAllLists(elmnt) {
           let x = document.getElementsByClassName("autocomplete-items");
           for (let i = 0; i < x.length; i++) {
@@ -264,11 +231,10 @@ input[type=submit] {
           }
         }
       }
-      /*execute a function when someone clicks in the document:*/
       document.addEventListener("click", function (e) {
           closeAllLists(e.target);
       });
-      }
+     }
 
          
   </script>
