--- a/src/main/resources/templates/draw.html
+++ b/src/main/resources/templates/draw.html
@@ -2,66 +2,13 @@
 <html lang="kr">
   <head>
     <title>Title</title>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <style>
-        .spinner{
-            display: block;
-            position: fixed;
-            z-index: 331;
-            top: calc(25%-(10px/2));
-            right: calc(25%-(10px/2));
-        }
-
-        .autocomplete {
-  /*the container must be positioned relative:*/
-            position: relative;
-            display: inline-block;
-          }
-          input {
-            border: 1px solid transparent;
-            background-color: #f1f1f1;
-            padding: 8px;
-            font-size: 16px;
-          }
-          input[type=submit] {
-            background-color: DodgerBlue;
-            color: #fff;
-          }
-          .autocomplete-items {
-            position: absolute;
-            border: 1px solid #d4d4d4;
-            border-bottom: none;
-            border-top: none;
-            z-index: 99;
-            /*position the autocomplete items to be the same width as the container:*/
-            top: 100%;
-            left: 0;
-            right: 0;
-          }
-          .autocomplete-items div {
-            padding: 10px;
-            cursor: pointer;
-            background-color: #fff;
-            border-bottom: 1px solid #d4d4d4;
-          }
-          .autocomplete-items div:hover {
-            /*when hovering an item:*/
-            background-color: #e9e9e9;
-          }
-          .autocomplete-active {
-            /*when navigating through the items using the arrow keys:*/
-            background-color: DodgerBlue !important;
-            color: #ffffff;
-          }
-    </style>
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+    
+   
   </head>
   <body style="background-color:rgb(217, 235, 235)">
     
@@ -155,89 +102,11 @@
 
        
   </body>
-  <script>
-
-    document.getElementById("btn").addEventListener("click",()=>{
-        setInterval(()=>{
-          document.getElementById("form").submit();
-        },2000);
-    })
-
-    document.querySelectorAll(".name").forEach(target=>{
-        target.addEventListener("keyup",()=>{
-        let name = target.value
-          if(name != ''){
-            fetch("/api/v1/user/search/"+name,{
-                  method : 'GET',
-                  headers: {'Content-Type': 'application/json'}
-                }).then(res => {
-                  if(res.ok){
-                    return res.json()
-                  }
-                }).then(json => {  
-                  console.log(json);
-                  autocomplete(target, json);
-                })
-            }
-        })
-      })
-      
-      function autocomplete(inp, arr) {
-        let currentFocus;
-     
-        let a, b, i, val = inp.value;
-        
-        closeAllLists();
-        currentFocus = -1;
-        a = document.createElement("div");
-        
-        a.setAttribute("id", this.id + "autocomplete-list");
-        a.setAttribute("class", "autocomplete-items");
-        
-
-        inp.parentNode.appendChild(a);
-        /*for each item in the array...*/
-        for (i = 0; i < arr.length; i++) {
-            b = document.createElement("div");
-            b.innerHTML = "<strong>" + arr[i].substr(0, val.length) + "</strong>";
-            b.innerHTML += arr[i].substr(val.length);
-            b.innerHTML += "<input type='hidden' value='" + arr[i] + "'>";
-            b.addEventListener("click", function(e) {
-                inp.value = this.getElementsByTagName("input")[0].value;
-                closeAllLists();
-            });
-            a.appendChild(b);
-         }
-
-        function addActive(x) {
-          if (!x) return false;
-          removeActive(x);
-          if (currentFocus >= x.length) currentFocus = 0;
-          if (currentFocus < 0) currentFocus = (x.length - 1);
-          x[currentFocus].classList.add("autocomplete-active");
-        }
-
-        function removeActive(x) {
-              for (let i = 0; i < x.length; i++) {
-            x[i].classList.remove("autocomplete-active");
-          }
-        }
-
-        function closeAllLists(elmnt) {
-          let x = document.getElementsByClassName("autocomplete-items");
-          for (let i = 0; i < x.length; i++) {
-            if (elmnt != x[i] && elmnt != inp) {
-            x[i].parentNode.removeChild(x[i]);
-          }
-        }
-      }
-      document.addEventListener("click", function (e) {
-          closeAllLists(e.target);
-      });
-     }
-
-         
-  </script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
+ 
 </html>
 
 
