--- a/src/main/resources/templates/draw.html
+++ b/src/main/resources/templates/draw.html
@@ -54,11 +54,11 @@
                   </select>
 
                   <div class="mt-3">
-                      <input type="text" class="form-control" id="bet" name="bet" placeholder="금액을 입력해주세요">
+                      <input type="text" class="form-control" id="bet" name="bet" placeholder="금액을 입력해주세요" autocomplete="off">
                   </div>
 
                    <div class="mt-3">
-                      <input type="text" class="form-control" id="title" name="title" placeholder="제목을 입력해주세요">
+                      <input type="text" class="form-control" id="title" name="title" placeholder="제목을 입력해주세요" autocomplete="off">
                    </div>
                    <hr>
 
