--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -27,6 +27,7 @@
                     </div>
                 </div>
             </div>
+            <a type="button" class="btn btn-success btn-lg w-100 mb-5" href="/calendar">캘린더 보기</a>
         </div>
     
   </body>
